--- a/blogpost.html
+++ b/blogpost.html
@@ -1,10 +1,14 @@
 <html>
     <head>
-        <title>Quiobo</title>
+        <title>BLOGPOST☺</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
-        <h1>David Post</h1>
-        <p>Parrafo1</p>
+        <div id="container">
+            <div id="post">
+               <h1>Blog  utilizado para practicar en Git</h1>
+               <p>Estaremos practicando este tipo de Git para entender como funciona</p>
+            </div>
+        </div>
     </body>
 </html>
