--- a/blogpost.html
+++ b/blogpost.html
@@ -4,8 +4,13 @@
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
-        <div id="container">
+       
+        
+            <div id="container">
             <div id="post">
+                <div id="cabecera">
+                    cabecera
+                </div>
                <h1>Blog  utilizado para practicar en Git</h1>
                <p>Estaremos practicando este tipo de Git para entender como funciona</p>
             </div>
