--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,8 @@
             <div id="container">
             <div id="post">
                 <div id="cabecera">
-                    cabecera
+                    HyperBlog
+                    <span id="tagline">Tu blog de confianza</span>
                 </div>
                <h1>Blog  utilizado para practicar en Git</h1>
                <p>Estaremos practicando este tipo de Git para entender como funciona</p>
