Se le agrego un poco de contenido a la parte de informacion sobre la pagina

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,10 @@
         <div id="container">
             <div id="post">
                <h1>Blog  utilizado para practicar en Git</h1>
-               <p>Estaremos practicando este tipo de Git para entender como funciona</p>
+               <p>Estaremos practicando este tipo de Git para entender como funciona
+                   de tal manera que podamos aprender mas sobre este tipo de aplicaciones.
+                   su pinche madre que wena ta la mota oye, pega durisimo la de panteon 
+               </p>
             </div>
         </div>
     </body>
