Agregue unas cosillas tambien y lo puse en azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,12 +10,12 @@
             <div id="post">
                 <div id="cabecera">
                     HyperBlog
-                    <span id="tagline">Tu blog de confianza</span>
+                    <span id="tagline">Tu blog de maestro</span>
                 </div>
                <h1>Blog  utilizado para practicar en Git</h1>
                <p>Estaremos practicando este tipo de Git para entender como funciona
                    de tal manera que podamos aprender mas sobre este tipo de aplicaciones.
-                   su pinche madre que wena ta la mota oye, pega durisimo la de panteon 
+                   su pinche madre que wena ta la mota oye, pega durisimo la de panteon suscribete 
                </p>
             </div>
         </div>
