Agregue una imagen en un ignore

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,7 @@
                     <span id="tagline">Tu blog de cabecera</span>
                 </div>
                <h1>Blog  utilizado para practicar en Git</h1>
+               <p><img src="imagenes/imagen1.jpg" width="100%"></p>
                <p>Estaremos practicando este tipo de Git para entender como funciona
                    de tal manera que podamos aprender mas sobre este tipo de aplicaciones.
                    su pinche madre que wena ta la mota oye, pega durisimo la de panteon suscribete 
